# ryan-agent-os-local

./: AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-integration.md  architecture.md  new-repositories.md  roadmap.md  security.md  troubleshooting.md
scripts/: finish-agent-session.sh  install-termux.sh  install.ps1  install.sh  onboard-workspaces.sh  shell-functions.sh  start-agent-session.sh  verify.sh
src/rao/: __init__.py  cli.py  context.py  defaults.py  detection.py  doctor.py  env.py  envconfig.py  git.py  guard.py  handoff.py  hooks.py  onboard.py  paths.py  policies.py  project.py  refresh.py  registry.py  resolver.py  runner.py  scaffold.py  scanner.py  state.py  tomlutil.py
tests/: test_contract_update.py  test_detection.py  test_env.py  test_git_safety.py  test_guard.py  test_onboard.py  test_registry.py  test_state.py
